--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiosqlite==0.21.0
 annotated-types==0.7.0
 anyio==4.8.0
 async-timeout==5.0.1
@@ -18,19 +19,25 @@ httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 orjson==3.10.15
+packaging==24.2
 passlib==1.7.4
+pluggy==1.5.0
 pydantic==2.10.5
 pydantic-extra-types==2.10.2
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
 Pygments==2.19.1
 PyJWT==2.10.1
+pytest==8.3.4
+pytest-asyncio==0.25.3
+pytest-order==1.3.0
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
